--- a/Homework 1/Homework 1 -  Regression.ipynb
+++ b/Homework 1/Homework 1 -  Regression.ipynb
@@ -277,6 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Plot Test points vs Prdicted points\n",
     "zipped_lists = zip(X_test, y_pred)\n",
     "sorted_pairs = sorted(zipped_lists)\n",
     "\n",
